--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,42 +1,60 @@
 <div class="font default-bg-color">
-   <section class="padding-body r-mt-70">
-      <div class="swiper-wrapper-center">
-         <!-- main carousel -->
-         <swiper-container class="mySwiper" slides-per-view="1" space-between="30" loop="false" autoplay-delay="3000"
-            autoplay-disable-on-interaction="false" speed="800" centered-slides="true">
-            @for (slide of swiperSlides; track slide) {
-            <swiper-slide>
-               <a [href]="slide.link" target="_blank" class="slide-link">
-                  <div class="slide-bg" [style.backgroundImage]="'url(' + slide.img + ')'" role="img"
-                     aria-label="carousel slide"></div>
-               </a>
-            </swiper-slide>
-            }
-         </swiper-container>
-      </div>
-   </section>
+  <section class="padding-body r-mt-70">
+    <div class="swiper-wrapper-center">
+      <!-- main carousel -->
+      <swiper-container
+        class="mySwiper"
+        slides-per-view="1"
+        space-between="30"
+        loop="false"
+        autoplay-delay="3000"
+        autoplay-disable-on-interaction="false"
+        speed="800"
+        centered-slides="true"
+      >
+        @for (slide of swiperSlides; track slide) {
+        <swiper-slide>
+          <a [href]="slide.link" target="_blank" class="slide-link">
+            <div
+              class="slide-bg"
+              [style.backgroundImage]="'url(' + slide.img + ')'"
+              role="img"
+              aria-label="carousel slide"
+            ></div>
+          </a>
+        </swiper-slide>
+        }
+      </swiper-container>
+    </div>
+  </section>
 
-   <div class="w-100 d-flex justify-content-center">
-      <section class="cards-section w-75">
-         <div class="cards-header">
-            <h2 class="text-white fw-bold">All Event</h2>
-         </div>
-         <div class="cards-grid">
-            @for (s of getGridSlides(); track $index; let i = $index) {
-            <div class="card" [class.highlight]="i < 3" (click)="goTo(s.index)" (keydown.enter)="goTo(s.index)"
-               role="button" tabindex="0">
-               <div class="card-media" aria-hidden="true">
-                  <img [src]="s.data.img" class="card-image" alt="event" />
-                  <div class="overlay">
-                     <h4 class="card-title">{{ s.data.title }}</h4>
-                     <p class="card-date">{{ s.data.date }}</p>
-                     <p class="card-location">{{ s.data.description }}</p>
-                     <div class="card-price">{{ s.data.price }}</div>
-                  </div>
-               </div>
+  <div class="w-100 d-flex justify-content-center">
+    <section class="cards-section w-75">
+      <div class="cards-header">
+        <h2 class="text-white fw-bold">All Event</h2>
+      </div>
+      <div class="cards-grid">
+        @for (s of getGridSlides(); track $index; let i = $index) {
+        <div
+          class="card"
+          [class.highlight]="i < 3"
+          (click)="goTo(s.index)"
+          (keydown.enter)="goTo(s.index)"
+          role="button"
+          tabindex="0"
+        >
+          <div class="card-media" aria-hidden="true">
+            <img [src]="s.data.img" class="card-image" alt="event" />
+            <div class="overlay">
+              <h4 class="card-title">{{ s.data.title }}</h4>
+              <p class="card-date">{{ s.data.date }}</p>
+              <p class="card-location">{{ s.data.description }}</p>
+              <div class="card-price">{{ s.data.price }}</div>
             </div>
-            }
-         </div>
-      </section>
-   </div>
+          </div>
+        </div>
+        }
+      </div>
+    </section>
+  </div>
 </div>
